<resources>
    <string name="app_name">CashIn</string>
    <string name="title_activity_main">Your Profile</string>
    <string name="cash_in">Cash In</string>
    <string name="action_settings">Settings</string>
    <string name="login_header">Cash In</string>
    <string name="title_activity_authenticated">AuthenticatedActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="username_hint">someone@example.com</string>
    <string name="password_hint">Password</string>
    <string name="your_photo">Your Photo</string>
    <string name="confirm_on_close">Exit Cash In</string>
    <string name="default_dateof_birth">01-Jan-1990</string>
    <string name="pan_number">PAN Number</string>
    <string name="pan_number_hint">ALHRR0000S</string>
    <string name="relation_name_hint">Name of the relation</string>
    <string name="enter_pan_card_details_button"><![CDATA[Enter PAN card details  >]]></string>
    <string name="pan_card_not_ready">Don\'t have the PAN card ready?</string>
    <string name="scan_aadhar_qr_code">Scan Aadhar card QR Code</string>
    <string name="aadhar_card_not_ready">Don\'t have the Aadhar card ready?</string>
    <string name="enter_aadhar_details"><![CDATA[Enter Aadhar details  >]]></string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_connect">Connect with facebook</string>
    <string name="facebook_connected_as">Connected as</string>
    <string name="facebook_profile_details">Profile Details</string>
    <string name="workplace">Workplace</string>
    <string name="current_city">Current city</string>
    <string name="hometown">Hometown</string>
    <string name="relationship_status">Relationship status</string>
    <string name="label">Label</string>
    <string name="employer_name">Employer Name</string>
    <string name="work_email_id">Work Email Id</string>
    <string name="work_address">Work Address</string>
    <string name="take_busininess_card_snap">Take a snap of your business card</string>
    <string name="business_card_not_ready">Don\'t have a business card ready?</string>
    <string name="enter_work_details"><![CDATA[Enter work details  >]]></string>
    <string name="linkedIn">LinkedIn</string>
    <string name="linkedIn_connect">Connect</string>
    <string name="linkedIn_connected_as">Connected As</string>
    <string name="work_experience">Work Experience</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="time_period">Time Period</string>
    <string name="school">School</string>
    <string name="enter_primary_bank_details">Enter your primary bank details</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_statement_details">Bank statement details</string>
    <string name="account_number_last_4_digits">Account Number (Last 4 digits)</string>
    <string name="last_three_month_salary">Please enter your last 3 months income</string>
    <string name="month_one">Month One</string>
    <string name="month_two">month_two</string>
    <string name="month_three">Month_three</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="house_own_or_rented">Is the House own or rented ?</string>
    <string name="rent">Rent</string>
    <string name="owned">Owned</string>
    <string name="owned_by">Own</string>
    <string name="server_url">http://52.10.22.1:1400</string>
    <string name="server_url_ocr">http://52.10.22.1:1400</string>
    <string name="server_date_time_format">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="title_please_wait">Please wait ....</string>
    <string name="authenticating">Authenticating</string>
    <string name="query_server">Querying server</string>
    <string name="waiting_for_linkedIn">Waiting for linkedIn</string>
    <string name="waiting_for_gps">Witing for gps</string>
    <string name="waiting_for_facebook">Waiting for facebook</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="gps_failed">Failed to get location from GPS</string>
    <string name="save_sucess">Data saved sucessfully</string>
    <string name="waiting_for_server">Waiting for server</string>
    <string name="not_present_on_server">Data not available</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="facebook_app_id">1442098402762222</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="processing_image">Processing Image</string>
    <string name="registering">registering user</string>
    <string name="create_account">Create Account</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration_sucess">Registration sucessfull. Please login to continue</string>
    <string name="register_on_login_screen">No account yet? Create one</string>
    <string name="title_register">Create Account</string>
    <string name="saving_current_address">Saving current address</string>
    <string name="reset">Reset</string>
    <string name="saving_permanent_address">Saving permanent address</string>
    <string name="reset_sucess">Reset sucessfull</string>
    <string name="your_profile">Your Profile</string>
    <string name="father_name">Father\'s Name/Spouse Name</string>
    <string name="logout">Logout</string>
    <string name="product_tour">Product tour</string>
    <string name="sign_in_with_google">Sign in</string>
    <string name="signing_in">Signing in</string>
    <string name="read_transactional_sms">Read transactional SMS</string>
    <string name="ever_taken_a_loan">Have you ever taken a loan?</string>
    <string name="cheque_bounced">Has any of your cheques bounced in the last 3 months?</string>
    <string name="application_rejected">Has your application for a loan ever been rejected?</string>
    <string name="ever_defaulted">Have you defaulted on a previous loan?</string>
    <string-array name="city_array">
        <item>Bangalore</item>
        <item>Mumbai</item>
    </string-array>
    <string-array name="state_array">
        <item>Karnataka</item>
        <item>Maharashtra</item>
    </string-array>
    <string-array name="own_array">
        <item>Family</item>
        <item>Self</item>
        <item>Joint</item>
    </string-array>
    <string-array name="relationship_array">
        <item>Son Of</item>
        <item>Daughter Of</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="reference_relationship_array">
        <item>Friend</item>
        <item>Family</item>
        <item>Neighbour</item>
        <item>Acquaintance</item>
    </string-array>
    <string name="title_activity_intro_slider">IntroSliderActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="take_a_selfie">Take a selfie</string>
    <string name="get_preapproved_in_ten_minutes">Get pre-approved in 10 minutes</string>
    <string name="recieve_money_card">Recieve money card</string>
    <string name="photos_of_documents">Photos of documents</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate_product_hash">Package hash</string>
    <string name="degree">Degree</string>
    <string name="field_of_study">Field of study</string>
    <string name="education">Education</string>
    <string name="account_number">Account Number</string>
    <string name="bank">Bank</string>
    <string name="add_more">Add more</string>
    <string name="primary_bank_details">Primary bank details</string>
    <string name="click_the_bank_icon_in_the__circle_to_select_as_primary_bank">Click the bank icon in the circle to select as primary bank</string>
    <string name="description_image">image</string>
    <string name="try_to_keep_these_documents_ready">Try to keep these documents ready</string>
    <string name="Must">Must</string>
    <string name="aadhar">Aadhar card</string>
    <string name="pan_card">Pan Card</string>
    <string name="optional">Optional</string>
    <string name="business_card">Business card</string>
    <string name="bank_statement">Bank statement</string>
    <string name="salary_slips">Salary slips</string>
    <string name="get_started">Get Started</string>
    <string name="standard">Standard</string>
    <string name="ffc">Front-Facing</string>
    <string name="record">Record Video</string>
    <string name="stop">Stop</string>
    <string name="lock_to_landscape">Lock to Landscape</string>
    <string name="launch_camera_app">Launch Camera App</string>
    <string name="take_picture">Take Picture</string>
    <string name="auto_focus">Auto-focus</string>
    <string name="single_shot_mode">Single-Shot Mode</string>
    <string name="no_image">There was no image to show!</string>
    <string name="show_zoom">Show Zoom</string>
    <string name="flash">Flash</string>
    <string name="launch_full_screen">Launch Full-Screen</string>
    <string name="mirror_ffc">Mirror FFC</string>
    <string name="or">Or</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="avatar_base_url">https://s3-ap-southeast-2.amazonaws.com/cashin-dev/avatars/</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="cwac_nav">
        <item >@string/standard</item>
        <item >@string/ffc</item>
    </string-array>
    <string name="title_activity_main_activity_my">MainActivityMy</string>
    <string name="send_message_to_referrals">Send message to referrals</string>
    <string name="your_referrals">Your Referrals</string>
    <string name="message">Message</string>
    <string name="default_message">Default Message</string>
    <string name="send_message">Send Message</string>
</resources>