<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent" android:orientation="vertical"
            android:layout_height="match_parent">
    <Switch
        android:id="@+id/switch_loan_taken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ever_taken_a_loan" />

    <Switch
        android:id="@+id/switch_cheque_bounced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cheque_bounced" />

    <Switch
        android:id="@+id/switch_application_rejected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/application_rejected" />

    <Switch
        android:id="@+id/switch_defaulted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ever_defaulted" />

    <LinearLayout android:layout_alignParentBottom="true" android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_save" android:text="@string/save" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_reset" android:text="@string/reset" />

    </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progres_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center" />

</android.support.design.widget.CoordinatorLayout>