<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:id="@+id/ll_pan_card_fragment">

    <FrameLayout
        android:id="@+id/fl_linkedIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <LinearLayout
            android:visibility="visible"
            android:id="@+id/ll_linkedIn_connect"
            android:layout_width="match_parent" android:gravity="center"  android:layout_height="match_parent" android:orientation="vertical"
            android:baselineAligned="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/linkedIn" style="@android:style/TextAppearance.DeviceDefault.Large" />

                <ImageButton
                    android:id="@+id/btn_linkedIn_connect"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:src="@drawable/linkedin_default"
                    android:contentDescription="Signin with linkedin" />


        </LinearLayout>

        <ScrollView android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"  android:id="@+id/rl_linkedin_details">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_connectedAs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/linkedIn_connected_as"
                    />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_work_experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:text="@string/work_experience"  style="@android:style/TextAppearance.DeviceDefault.Large"
                />
            <com.mantralabsglobal.cashin.ui.view.CustomEditText
                xmlns:custom="http://schemas.android.com/apk/res/com.mantralabsglobal.cashin"
                android:id="@+id/cs_job_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" custom:field_label="@string/job_title" custom:field_icon="@drawable/ic_work_address"/>

            <com.mantralabsglobal.cashin.ui.view.CustomEditText
                xmlns:custom="http://schemas.android.com/apk/res/com.mantralabsglobal.cashin"
                android:id="@+id/cs_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" custom:field_label="@string/company" custom:field_icon="@drawable/ic_work_address"/>
            <com.mantralabsglobal.cashin.ui.view.CustomEditText
                xmlns:custom="http://schemas.android.com/apk/res/com.mantralabsglobal.cashin"
                android:id="@+id/cs_time_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" custom:field_label="@string/time_period" custom:field_icon="@drawable/ic_work_address"/>

            <TextView
                android:id="@+id/tv_education_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:text="@string/education"  style="@style/AppTheme.Form.Header"
                />

            <com.mantralabsglobal.cashin.ui.view.CustomEditText android:id="@+id/cs_school"
    android:layout_width="match_parent"
                android:layout_height="wrap_content" custom:field_label="@string/school" custom:field_icon="@drawable/ic_work_address"/>

            <com.mantralabsglobal.cashin.ui.view.CustomEditText android:id="@+id/cs_degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" custom:field_label="@string/degree" custom:field_icon="@drawable/ic_work_address"/>

            <com.mantralabsglobal.cashin.ui.view.CustomEditText android:id="@+id/cs_fieldOfStudy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" custom:field_label="@string/field_of_study" custom:field_icon="@drawable/ic_work_address"/>


            <LinearLayout android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn_save" android:text="@string/save" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn_reset" android:text="@string/reset" />

            </LinearLayout>

        </LinearLayout>
        </ScrollView>

    </FrameLayout>
    <ProgressBar
        android:id="@+id/progres_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center" />

</android.support.design.widget.CoordinatorLayout>
