<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context="com.mantralabsglobal.cashin.ui.activity.app.LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center"
        >

        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cash_in"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/cash_in"
            style="@style/LoginFont"
            android:textSize="@dimen/font_size_header"
            />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        >

        <com.mantralabsglobal.cashin.ui.view.CustomEditText
            xmlns:custom="http://schemas.android.com/apk/res/com.mantralabsglobal.cashin"
            android:id="@+id/cet_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" custom:field_label="@string/email"/>


        <com.mantralabsglobal.cashin.ui.view.CustomEditText
            xmlns:custom="http://schemas.android.com/apk/res/com.mantralabsglobal.cashin"
            android:id="@+id/cet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" custom:field_label="@string/password" custom:password="true"/>

        <Button android:layout_marginTop="@dimen/form_input_margin_top"
            android:layout_width="match_parent"
            android:textColor="@color/primary"
            android:layout_height="wrap_content" android:text="@string/create_account" android:id="@+id/btn_create_account"/>

        <Button android:background="@null"
            android:layout_width="match_parent"
            android:textColor="@color/light"
            android:layout_height="wrap_content" android:text="@string/already_registered_login" android:capitalize="none" android:id="@+id/btn_login_in" />


    </LinearLayout>
    </ScrollView>

</LinearLayout>
